--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: shamsi_date_picker
 description: ShamsiDatePicker
 version: 0.0.1
-homepage:
+homepage: https://github.com/rezam92/ShamsiDatePicker
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
