--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: shamsi_date_picker
-description: ShamsiDatePicker
+name: persian_modal_date_picker
+description: Persian modal date picker
 version: 0.0.1
-homepage: https://github.com/rezam92/ShamsiDatePicker
+homepage: https://github.com/rezam92/Persian-Modal-Date-Picker
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
